welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:101: error: value droite is not a member of Unit
  avance()droite()
          ^